--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "stripe": "^14.0.0",
+    "@supabase/supabase-js": "^2.89.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.2"
+    "react-router-dom": "^6.30.2",
+    "stripe": "^14.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
